static/css/base.css
html {
    height: 100%;
}

body {
    background: url('/media/welcome_image.jpg') no-repeat center center fixed;
	background-size: cover;
    height: calc(100vh - 164px);
    background-color: #F2EFE9;
    font-family: "Roboto", serif;
}

/*------Colours ------*/
/*-- Background --*/
.bg-dark-green {
    background-color: #26400D;
}

.bg-light-green {
    background-color: #97BF5A;
}

.bg-off-white {
    background-color: #F2EFE9;
}

.bg-dark {
    background-color: #2D2D2D;
}

.bg-light-brown {
    background-color: #BFAE9F;
}

/*-- text --*/

.tx-dark-green {
    color: #26400D;
}

.tx-light-green {
    color: #97BF5A;
}

.tx-white {
    color: #F2EFE9;
}

.tx-dark {
    color: #2D2D2D;
}

.tx-light-brown {
    color: #BFAE9F;
}

/*------ Header ------*/

#search-bar {
    border: 2px solid #F2EFE9;
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
}

#search-btn {
    border: 2px solid #F2EFE9;
    border-left: none;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
}

.main-nav-link {
    text-decoration: none;
}

/*------ welcome page ------*/

#welcome-message {
    border-radius: 5px;
}

/*------ header container push down ------*/

.header-container {
    margin-top: 125px;
}

/*------ overlay ------*/

.overlay {
    height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	position: fixed;
	background: #F2EFE9;
	z-index: -1;
}

/*------ products view ------*/

.card-img-top {
    min-height: 200px;
}

#sort-selector {
    border-radius: 6px;
}

.sort-active {
    border: 4px solid #26400D;
}

/*------ product detail view ------*/

.image-container {
    width: 264px;
}

.image-container img {
    border-radius: 6px;
    border: 2px solid #26400D;
    box-shadow: 3px 5px rgb(0,0,0,0.1);
}

#desc-label {
    text-decoration: underline;
}

